--- a/Pronia/frontend/src/components/brand/Brand.css
+++ b/Pronia/frontend/src/components/brand/Brand.css
@@ -1,31 +1,50 @@
 .banner-wrapper {
-    position: relative;
-    width: 100%;
+  position: relative;
+  width: 100%;
 }
 
 .banner-img {
-    width: 100%;
-    display: block;
+  width: 100%;
+  display: block;
 }
 
 .banner-wrapper .row {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  width: 100%;
 }
 
 .banner-wrapper .col-2 {
-    width: 100px;
-    height: 100px;
+  width: 100px;
+  height: 100px;
 }
 
 .brand-img img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+
+@media (max-width: 768px) {
+  .banner-wrapper .row {
+    position: static;
+    transform: none;
+    padding: 20px 0;
+    gap: 15px;
+  }
+
+  .banner-img {
+    display: none;
+  }
+
+  .banner-wrapper .col-2 {
+    width: 80px;
+    height: 80px;
+  }
 }
