--- a/Pronia/frontend/src/components/product/Product.css
+++ b/Pronia/frontend/src/components/product/Product.css
@@ -17,3 +17,10 @@
     display: flex;
     gap: 7px;
 }
+
+.product-btn:hover{
+    background-color: inherit;
+    border: 1px solid #abd373;
+    transition: all 0.4s;
+    color: #abd373;
+}
