--- a/Pronia/frontend/src/components/servic/Servic.css
+++ b/Pronia/frontend/src/components/servic/Servic.css
@@ -19,3 +19,10 @@
     font-weight: 600;
 }
 
+@media(max-width:768px){
+    .service{
+        display: flex;
+        width: 100%;
+        margin-bottom: 30px;
+    }
+}
