--- a/Bilet 5/frontend/src/components/hero/Hero.css
+++ b/Bilet 5/frontend/src/components/hero/Hero.css
@@ -1,5 +1,14 @@
 #hero-area {
-    background-image: url(../../assets/images/hero_1.jpg.webp);
-    width: 100%;
-    height: 120vh;
+  background-image: url(../../assets/images/hero_1.jpg.webp);
+  width: 100%;
+  height: 120vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+@media (max-width: 768px) {
+  #hero-area {
+    height: 30vh;
+  }
 }
