--- a/Bilet 5/frontend/src/index.css
+++ b/Bilet 5/frontend/src/index.css
@@ -74,6 +74,11 @@ button:focus-visible {
   box-sizing: border-box;
 }
 
+body{
+  font-family: 'Anton', sans-serif;
+
+}
+
 a{
   text-decoration: none;
   color: inherit;
@@ -85,6 +90,7 @@ li{
 
 ul{
   margin: 0;
+  padding: 0;
 }
 
 img{
@@ -93,5 +99,5 @@ img{
 }
 
 .container{
-  max-width: 1200px;
+  max-width: 1140px;
 }
