--- a/Bilet 7/frontend/src/components/product/Product.css
+++ b/Bilet 7/frontend/src/components/product/Product.css
@@ -1,24 +1,33 @@
-.product{
-    width: 33.3%;
-    padding: 50px;
-    border-bottom: 1px solid rgb(226, 225, 225);
-    border-right: 1px solid rgb(226, 225, 225);
-    border-left: 1px solid rgb(226, 225, 225);
+.product {
+  width: 33.3%;
+  padding: 50px;
+  border-bottom: 1px solid rgb(226, 225, 225);
+  border-right: 1px solid rgb(226, 225, 225);
+  border-left: 1px solid rgb(226, 225, 225);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.product-title{
-    text-align: center;
+.product-title {
+  text-align: center;
 }
 
-.product-title button{
-    background: #207dff;
-    padding: 5px 20px;
-    border: 1px solid #207dff;
-    color: white;
+.product-title button {
+  background: #207dff;
+  padding: 5px 20px;
+  border: 1px solid #207dff;
+  color: white;
 }
 
-@media(max-width:768px){
-    .product{
-        width: 100%;
-    }
+.product img {
+  width: 70%;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .product {
+    width: 100%;
+  }
 }
