--- a/Bilet 7/frontend/src/pages/admin/CreateForm.css
+++ b/Bilet 7/frontend/src/pages/admin/CreateForm.css
@@ -1,3 +1,20 @@
+form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  width: 300px;
+}
+
 form input{
-    display: flex;
+   padding: 5px 10px;
+}
+
+form button {
+  background-color: #207dff;
+  width: 40%;
+  margin: 30px 0;
+  padding: 10px;
+  color: white;
+  border: 1px solid #207dff;
+  border-radius: 15px;
 }
