--- a/Bilet 12/frontend/src/components/about/About.css
+++ b/Bilet 12/frontend/src/components/about/About.css
@@ -1,18 +1,51 @@
-.about{
-    display: flex;
-    flex-wrap: wrap;
+.about {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.about-title{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 40%;
+.about-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 40%;
 }
 
-.about-img{
-    width: 60%;
+.about-title h3 {
+  margin-bottom: 50px;
+  font-size: 30px;
+  color: #404044;
 }
-.about-img img{
-    width: 600px;
+
+.about-title p {
+  font-family: "Muli", Arial, sans-serif;
+  background: #fff;
+  font-size: 16px;
+  line-height: 1.8;
+  font-weight: 300;
+  color: #8b8b92;
+}
+
+.about-title span {
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: rgba(0, 0, 0, 0.2);
+}
+
+.about-img {
+  width: 60%;
+}
+.about-img img {
+  width: 80%;
+}
+
+@media (max-width: 768px) {
+  .about-img img {
+    width: 100%;
+  }
+  .about-title,
+  .about-img {
+    width: 100%;
+  }
 }
