--- a/Bilet 12/frontend/src/index.css
+++ b/Bilet 12/frontend/src/index.css
@@ -73,12 +73,16 @@ button:focus-visible {
   box-sizing: border-box;
 }
 
+img{
+  width: 100%;
+  height: auto;
+}
 
 li {
   list-style: none;
 }
 
 .container{
-  max-width: 1140px;
+  max-width: 1140px !important;
   margin: 0 auto;
 }
