--- a/Bilet 12/frontend/src/components/product/Product.css
+++ b/Bilet 12/frontend/src/components/product/Product.css
@@ -26,7 +26,11 @@
 
 .product-price {
   font-size: 30px;
-  margin-left: 20px;
+  margin-left: auto;
+}
+
+.product-price p{
+  float: right;
 }
 
 .product-title button {
