--- a/Bilet 14/frontend/src/components/welcome/Welcome.css
+++ b/Bilet 14/frontend/src/components/welcome/Welcome.css
@@ -1,5 +1,7 @@
 #welcome-area{
     padding: 50px 0;
+    background-color: rgb(245, 244, 244);
+    margin: 60px 0;
 }
 
 .welcome {
@@ -15,8 +17,14 @@
     text-align: center;
 }
 
+.welcome-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .welcome-img img {
-    width: 65%;
+    width: 70%;
     border-radius: 10px;
 }
 
