--- a/Bilet 14/frontend/src/index.css
+++ b/Bilet 14/frontend/src/index.css
@@ -67,7 +67,6 @@ button:focus-visible {
   }
 } */
 
-
 * {
   margin: 0;
   padding: 0;
@@ -82,12 +81,12 @@ li {
   list-style: none;
 }
 
-img{
+img {
   width: 100%;
   height: auto;
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1200px !important;
   margin: 0 auto;
 }
